# wca-odds-next

./: docker-compose.yml
client/: .gitignore  .oxlintrc.json  Dockerfile  components.json  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.js  vite.config.ts
client/public/: site.webmanifest
client/src/: App.vue  main.ts  main.tsx  routeTree.gen.ts  router.ts  style.css  styles.css
client/src/lib/: PersonalRankingsContext.tsx  colorMode.ts  dateUtils.ts  types.ts  useCompetitionData.ts  useDebounce.ts  useRankDetail.ts  useSimulation.ts  utils.ts  (+1 more)
client2/: .oxfmtrc.json  .oxlintrc.json  index.html  package.json  tsconfig.json  vite.config.js
client2/src/: main.tsx  routeTree.gen.ts  styles.css
client2/stats/: index.html
results_loader/: Dockerfile  bootstrap.py  common.py  entrypoint.sh  pull_results.py  requirements.txt  sync.py
server/: Cargo.toml  Dockerfile  rustfmt.toml
server/src/: main.rs
server/src/routes/: country.rs  health.rs  history.rs  mod.rs  person.rs  rankings.rs  simulation.rs
server/src/utils/: calc.rs  charts.rs  competitor.rs  constants.rs  database.rs  key_extractor.rs  middleware.rs  mod.rs  simulation.rs  types.rs  validation.rs
server/src/utils/charts/: builder.rs  histogram.rs  mod.rs  models.rs  rank.rs
server/src/utils/competitor/: loader.rs  mod.rs  model.rs  statistics.rs
server/src/utils/http/: error.rs  middleware.rs  mod.rs
server/src/utils/simulation/: mod.rs  results.rs  run.rs
server/src/utils/wca/: constants.rs  events.rs  mod.rs  validation.rs
(+215 files in other folders)
