[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = { version = "0.4.43", features = ["serde"] }
itertools = "0.14.0"
rand = "0.9.2"
rand_distr = "0.5.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono"] }
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tower_governor = "0.8.0"
moka = { version = "0.12", features = ["future"] }
http-body-util = "0.1"
cfg-if = "1.0.4"

[features]
default = ["enable_cache", "enable_governor"]
enable_cache = []
enable_governor = []